# OctoSwitch

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_ROUTING_PLAN.md  LICENSE  OCTOSWITCH_GROUP_INIT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: log_codes.rs  main.rs  runtime_events.rs  state.rs  test_utils.rs  tray_support.rs
src-tauri/src/commands/: config_commands.rs  copilot_commands.rs  gateway_config_commands.rs  metrics_commands.rs  mod.rs  model_commands.rs  model_fetch_commands.rs  model_group_commands.rs  plugin_dist_commands.rs  provider_commands.rs  skills_commands.rs  update_commands.rs  webdav_commands.rs
src-tauri/src/config/: app_config.rs  mod.rs  webdav_config.rs
src-tauri/src/database/: copilot_account_dao.rs  mod.rs  model_binding_dao.rs  model_group_dao.rs  model_group_member_dao.rs  provider_dao.rs  task_route_preference_dao.rs
src-tauri/src/domain/: copilot_account.rs  error.rs  local_skill.rs  mod.rs  model_binding.rs  model_group.rs  model_slug.rs  model_spec_subcode.rs  plugin_dist.rs  provider.rs  routing.rs  task_route_preference.rs
src-tauri/src/gateway/: error.rs  mod.rs  router.rs
src-tauri/src/service/: config_service.rs  default_groups_service.rs  local_skills_service.rs  mod.rs  plugin_dist_service.rs  provider_service.rs  routing_service.rs
src-tauri/src/services/: circuit_breaker_service.rs  copilot_auth.rs  copilot_headers.rs  copilot_vendor_cache.rs  mod.rs  (+7 more)
(+142 files in other folders)
